Add register db using mongo

--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -62,19 +62,19 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Hunger Halt</a>
+            <a href="index" class="navbar-brand">Hunger Halt</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="login.html" class="nav-item nav-link">Login</a>
+                    <a href="index" class="nav-item nav-link active">Home</a>
+                    <a href="about" class="nav-item nav-link">About</a>
+                    <a href="blog" class="nav-item nav-link">Blog</a>
+                    <a href="login" class="nav-item nav-link">Login</a>
 
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
         </div>
@@ -147,11 +147,11 @@
       
                   <div class="form-outline mb-4">
                     <input type="text" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">Your Name</label>
+                    <label class="form-label" for="form2Example18">NGO Name</label>
                   </div>
                   <div class="form-outline mb-4">
                     <input type="text" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">Your Location</label>
+                    <label class="form-label" for="form2Example18">NGO ID</label>
                   </div>
                   <div class="form-outline mb-4">
                     <input type="email" id="form2Example18" class="form-control form-control-lg" />
@@ -167,12 +167,12 @@
                     <label class="form-label" for="form2Example28">Re-enter Password</label>
                   </div>
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-info btn-lg btn-block" href="login.html" type="button">Register</button>
+                    <button class="btn btn-info btn-lg btn-block" href="login" type="button">Register</button>
                   </div>
       
                   <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                  <p>Already have an account? <a href="login.html" class="link-info">Login here</a></p>
-                  <p>Register As An NGO ? <a href="register.html" class="link-info"> &nbsp; Register As NGO Here</a></p>
+                  <p>Already have an account? <a href="login" class="link-info">Login here</a></p>
+                  <p>Register As An User ?<a href="reguser" class="link-info">Register As User Here</a></p>
       
                 </form>
       
