--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -62,19 +62,19 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Hunger Halt</a>
+            <a href="index" class="navbar-brand">Hunger Halt</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="login.html" class="nav-item nav-link">Login</a>
+                    <a href="index" class="nav-item nav-link active">Home</a>
+                    <a href="about" class="nav-item nav-link">About</a>
+                    <a href="blog" class="nav-item nav-link">Blog</a>
+                    <a href="login" class="nav-item nav-link">Login</a>
 
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
         </div>
@@ -146,33 +146,21 @@
                   <!-- <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3> -->
       
                   <div class="form-outline mb-4">
-                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">NGO Name</label>
-                  </div>
-                  <div class="form-outline mb-4">
-                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">NGO ID</label>
-                  </div>
-                  <div class="form-outline mb-4">
                     <input type="email" id="form2Example18" class="form-control form-control-lg" />
                     <label class="form-label" for="form2Example18">Email address</label>
                   </div>
+      
                   <div class="form-outline mb-4">
                     <input type="password" id="form2Example28" class="form-control form-control-lg" />
                     <label class="form-label" for="form2Example28">Password</label>
                   </div>
       
-                  <div class="form-outline mb-4">
-                    <input type="password" id="form2Example28" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example28">Re-enter Password</label>
-                  </div>
                   <div class="pt-1 mb-4">
-                    <button class="btn btn-info btn-lg btn-block" href="login.html" type="button">Register</button>
+                    <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
                   </div>
       
                   <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                  <p>Already have an account? <a href="login.html" class="link-info">Login here</a></p>
-                  <p>Register As An User ?<a href="reguser.html" class="link-info">Register As User Here</a></p>
+                  <p>Don't have an account? <a href="register" class="link-info">Register here</a></p>
       
                 </form>
       
@@ -180,7 +168,7 @@
       
             </div>
             <div class="col-sm-6 px-0 d-none d-sm-block">
-              <img class = 'hunger' src="img/reg.jpg"
+              <img src="img/login.jpg"
                 alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
             </div>
           </div>
