--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -141,22 +141,25 @@
       
               <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
       
-                <form style="width: 23rem;">
+                <form style="width: 23rem;" method="POST">
       
                   <!-- <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3> -->
       
                   <div class="form-outline mb-4">
-                    <input type="email" id="form2Example18" class="form-control form-control-lg" />
+                    <input name='email' type="email" id="form2Example18" class="form-control form-control-lg" />
                     <label class="form-label" for="form2Example18">Email address</label>
                   </div>
       
                   <div class="form-outline mb-4">
-                    <input type="password" id="form2Example28" class="form-control form-control-lg" />
+                    <input name='password' type="password" id="form2Example28" class="form-control form-control-lg" />
                     <label class="form-label" for="form2Example28">Password</label>
                   </div>
       
-                  <div class="pt-1 mb-4">
+                  {{!-- <div class="pt-1 mb-4">
                     <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
+                  </div> --}}
+                  <div class="pt-1 mb-4">
+                    <input class="btn btn-info btn-lg btn-block" value="Login" type="submit" />
                   </div>
       
                   <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
