--- a/templates/views/ngologin.hbs
+++ b/templates/views/ngologin.hbs
@@ -146,36 +146,29 @@
                   <!-- <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3> -->
       
                   <div class="form-outline mb-4">
-                    <input name='name' type="text" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">NGO Name</label>
+                    <input name='email' type="email" id="form2Example18" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example18">Email address</label>
                   </div>
+
                   <div class="form-outline mb-4">
                     <input name='id' type="text" id="form2Example18" class="form-control form-control-lg" />
                     <label class="form-label" for="form2Example18">NGO ID</label>
                   </div>
+      
                   <div class="form-outline mb-4">
-                    <input name='email' type="email" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">Email address</label>
-                  </div>
-                  <div class="form-outline mb-4">
-                    <input name='password1' type="password" id="form2Example28" class="form-control form-control-lg" />
+                    <input name='password' type="password" id="form2Example28" class="form-control form-control-lg" />
                     <label class="form-label" for="form2Example28">Password</label>
                   </div>
       
-                  <div class="form-outline mb-4">
-                    <input name='password2' type="password" id="form2Example28" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example28">Re-enter Password</label>
-                  </div>
                   {{!-- <div class="pt-1 mb-4">
-                    <button class="btn btn-info btn-lg btn-block" href="login" type="button">Register</button>
+                    <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
                   </div> --}}
                   <div class="pt-1 mb-4">
-                    <input class="btn btn-info btn-lg btn-block" value="Register" type="submit" />
+                    <input class="btn btn-info btn-lg btn-block" value="Login" type="submit" />
                   </div>
       
                   <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                  <p>Already have an account? <a href="login" class="link-info">Login here</a></p>
-                  <p>Register As An User ?<a href="reguser" class="link-info">Register As User Here</a></p>
+                  <p>Don't have an account? <a href="register" class="link-info">Register here</a></p>
       
                 </form>
       
@@ -183,7 +176,7 @@
       
             </div>
             <div class="col-sm-6 px-0 d-none d-sm-block">
-              <img class = 'hunger' src="img/reg.jpg"
+              <img src="img/login.jpg"
                 alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
             </div>
           </div>
