Add own blogs + profileuser.html

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -524,7 +524,7 @@
 
 
 
-    <!-- Blog Start -->
+ <!-- Blog Start -->
     <div class="blog">
         <div class="container">
             <div class="section-header text-center">
@@ -532,16 +532,18 @@
                 <h2>Latest news & articles directly from our blog</h2>
             </div>
             <div class="row">
+                <!--blog 1-->
+                <a href="https://mattersindia.com/2022/02/hunger-watch-survey-reveals-alarming-food-insecurity-in-india/">
                 <div class="col-lg-4">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="img/blog-1.jpg" alt="Image">
+                            <img src="img/blog-1.jpg" alt="Image" >
                         </div>
                         <div class="blog-text">
-                            <h3><a href="#">Lorem ipsum dolor sit</a></h3>
+                            <h3><a href="https://mattersindia.com/2022/02/hunger-watch-survey-reveals-alarming-food-insecurity-in-india/">Chronic hunger</a></h3>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte
-                                liqum metus tortor
+                                Report: 1 in 9 People Experience Chronic Hunger Worldwide
+According to a recent report from the United Nations, over 690 million people worldwide experience chronic hunger. This highlights the need for increased efforts to address food insecurity and improve access to nutritious food for all.
                             </p>
                         </div>
                         <div class="blog-meta">
@@ -550,16 +552,20 @@
                         </div>
                     </div>
                 </div>
+                </a>
+                <!--blog 1 ends-->
+                <!--blog 2-->
+                <a href="https://biobagworld.com.au/composting/council-fogo-recycling-bins-reduce-carbon-emissions/">
                 <div class="col-lg-4">
                     <div class="blog-item">
                         <div class="blog-img">
                             <img src="img/blog-2.jpg" alt="Image">
                         </div>
                         <div class="blog-text">
-                            <h3><a href="#">Lorem ipsum dolor sit</a></h3>
+                            <h3><a href="https://biobagworld.com.au/composting/council-fogo-recycling-bins-reduce-carbon-emissions/">Food wastage=Cars</a></h3>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte
-                                liqum metus tortor
+                                Study Finds that Food Waste Accounts for 8% of Global Greenhouse Gas Emissions
+A recent study has found that food waste contributes significantly to global greenhouse gas emissions, accounting for 8% of the total. Reducing food waste is crucial in the fight against climate change and in ensuring sustainable food systems.
                             </p>
                         </div>
                         <div class="blog-meta">
@@ -568,16 +574,20 @@
                         </div>
                     </div>
                 </div>
+                </a>
+                <!--blog 2 end-->
+                <!--blog 3 -->
+                <a href="https://lomi.com/blogs/news/innovative-ways-to-reduce-food-waste">
                 <div class="col-lg-4">
                     <div class="blog-item">
                         <div class="blog-img">
-                            <img src="img/blog-3.jpg" alt="Image">
+                            <img src="img/blog-3.jpg" alt="Image" >
                         </div>
                         <div class="blog-text">
-                            <h3><a href="#">Lorem ipsum dolor sit</a></h3>
+                            <h3><a href="https://lomi.com/blogs/news/innovative-ways-to-reduce-food-waste">Innovative food solutions</a></h3>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte
-                                liqum metus tortor
+                                Innovations in Food Technology Help to Reduce Waste and Feed the Hungry
+                                With the rise of new technologies such as food redistribution apps and smart refrigeration systems, there are now more opportunities than ever to reduce food waste and provide surplus food to those in need.
                             </p>
                         </div>
                         <div class="blog-meta">
@@ -586,10 +596,13 @@
                         </div>
                     </div>
                 </div>
+                </a>
+                <!--blog 3 ends-->
             </div>
         </div>
     </div>
     <!-- Blog End -->
+
 
 
     <!-- Footer Start -->
