add dashboard and qualitycontrol checkups also fix routing issues

--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -174,7 +174,8 @@
                   </div>
       
                   <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                  <p>Already have an account? <a href="login" class="link-info">Login here</a></p>
+                  <p>Already have an user account? <a href="login" class="link-info">Login here</a></p>
+                  <p>Already have an NGO account? <a href="ngologin" class="link-info">Login here</a></p>
                   <p>Register As An User ?<a href="reguser" class="link-info">Register As User Here</a></p>
       
                 </form>
