--- a/templates/views/profileuser.hbs
+++ b/templates/views/profileuser.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="utf-8">
     <title>Hunger Halt</title>
@@ -23,7 +23,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/stylelogin.css" rel="stylesheet">
+    
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -72,9 +72,9 @@
                     <a href="index" class="nav-item nav-link active">Home</a>
                     <a href="about" class="nav-item nav-link">About</a>
                     <a href="blog" class="nav-item nav-link">Blog</a>
-                    <a href="login" class="nav-item nav-link">Login</a>
 
                     <a href="contact" class="nav-item nav-link">Contact</a>
+                    <a href="profileuser" class="nav-item nav-link">Profile</a>
                 </div>
             </div>
         </div>
@@ -130,56 +130,102 @@
 <!-- Carousel End -->
     <section >
         <div class="container">
-          <div class="row">
-            <div class="col-sm-6 text-black">
+          
+            
       
-              <div>
-                <img class = "size" src="img/logo.jpg" alt="Ok">
+            
+              <div  class="form">
+                <img class = "size" src="img/logo.jpg" alt="Ok" >
                 <!-- <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i> -->
                 <!-- <span class="h1 fw-bold mb-0">Logo</span> -->
               </div>
       
-              <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+              
       
-                <form style="width: 23rem;" method="POST">
+                <form style="width: 70rem;" name=" Enter the food details here" >
+                    <h1><strong><em>FILL UP THE FOOD DETAILS HERE</em></strong></h1>
       
                   <!-- <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3> -->
       
-                  <div class="form-outline mb-4">
-                    <input name='email' type="email" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">Email address</label>
+                  <div class="container">
+                  <div class="form-outline " align-centre>
+                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example18">Food item name</label>
                   </div>
+                </div>
 
-                  <div class="form-outline mb-4">
-                    <input name='id' type="text" id="form2Example18" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example18">NGO ID</label>
+                  <div class="container">
+                  <div class="form-outline ">
+                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example18">Description of the food</label>
                   </div>
-      
-                  <div class="form-outline mb-4">
-                    <input name='password' type="password" id="form2Example28" class="form-control form-control-lg" />
-                    <label class="form-label" for="form2Example28">Password</label>
+                </div>
+
+                  <div class="container">
+                  <div class="form-outline ">
+                    <input type="text" id="form2Example18" class="form-control form-control-lg"  />
+                    <label class="form-label" for="form2Example18">Quantity available </label>
                   </div>
-      
-                  {{!-- <div class="pt-1 mb-4">
-                    <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
-                  </div> --}}
-                  <div class="pt-1 mb-4">
-                    <input href='fooduser' class="btn btn-info btn-lg btn-block" value="Login" type="submit" />
+                </div>
+
+                  <div class="container">
+                  <div class="form-outline ">
+                    <input type="text" id="form2Example28" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example28">Expiration date or best before date</label>
                   </div>
+                </div>
       
-                  <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                  <p>Don't have an account? <a href="register" class="link-info">Register here</a></p>
+                  <div class="container">
+                  <div class="form-outline ">
+                    <input type="text" id="form2Example28" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example28">Ingredients list</label>
+                  </div>
+                </div>
+
+                  
+
+                  <div class="container">
+                  <div class="form-outline " align-centre>
+                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example18">Pickup or delivery Location</label>
+                  </div>
+                </div>
+
+                  <div class="container">
+                  <div class="form-outline " align-centre>
+                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example18">Contact information for the person organization providing the surplus food</label>
+                  </div>
+                </div>
+
+                <div class="container">
+                  <div class="form-outline " align-centre>
+                    <input type="text" id="form2Example18" class="form-control form-control-lg" />
+                    <label class="form-label" for="form2Example18">Enter amount of food</label>
+                  </div>
+                  </div>
+                  
+
+               
+
+                 <div class="container">
+                    <button class="btn btn-info btn-lg btn-block" >Submit</button>
+                 </div>
+            
+                  
+                  
+                  
+                  
       
                 </form>
       
-              </div>
+              
       
             </div>
-            <div class="col-sm-6 px-0 d-none d-sm-block">
-              <img src="img/login.jpg"
-                alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
-            </div>
-          </div>
+
+              
+            
+          
         </div>
       </section>
 
@@ -267,6 +313,8 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="./script.js"></script>
+    
 </body>
 
 </html>
