Add images to readme.md 1

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -366,7 +366,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/team-3.jpg" alt="Team Image">
+                            <img id="tata" style="margin-bottom: 45px;" src="img/team-3.jpg" alt="Team Image">
                         </div>
                         <div class="team-text">
                             <h2>Ratan Tata</h2>
@@ -383,7 +383,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/team-4.jpg" alt="Team Image">
+                            <img style="margin-bottom: 40px;" src="img/team-4.jpg" alt="Team Image">
                         </div>
                         <div class="team-text">
                             <h2>James Alien</h2>
