--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -135,6 +135,7 @@
       
               <div>
                 <img class = "size" src="img/logo.jpg" alt="Ok">
+                <h1 class="logoname">HUNGER HALT</h1>
                 <!-- <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i> -->
                 <!-- <span class="h1 fw-bold mb-0">Logo</span> -->
               </div>
@@ -159,10 +160,11 @@
                     <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
                   </div> --}}
                   <div class="pt-1 mb-4">
-                    <input class="btn btn-info btn-lg btn-block" value="Login" type="submit" />
+                    <input class="btn btn-info btn-lg btn-block"  value="Login" type="submit" />
                   </div>
-      
+                
                   <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
+                  <p>Already have an NGO account? <a href="ngologin" class="link-info">Login here</a></p>
                   <p>Don't have an account? <a href="register" class="link-info">Register here</a></p>
       
                 </form>
